# minigen

./: .gitignore  README.md  main.py  pyproject.toml
src/minigen/: __init__.py  agent.py  context.py  network.py  state.py  tool.py
src/minigen/primitives/: __init__.py  chain.py  parallel.py  router.py
src/minigen/utils/: logging.py
