[project]
name = "minigen"
version = "0.1.0"
description = "a lightweight python framework library for building agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
    "openai>=1.98.0",
    "requests>=2.32.4",
    "streamlit>=1.47.1",
    "tinyio>=0.1.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
