[project]
name = "minigen"
version = "0.1.0"
description = "a lightweight python framework library for building agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.98.0",
    "requests>=2.32.4",
    "tinyio>=0.1.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
